<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amassirballpoint"
        android:gravity="center"
        android:text="@string/Hi"
        android:textColor="#751A53"
        android:textSize="40dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#671465"
        android:fontFamily="@font/frutigerltaabic"
        android:onClick="ButtonPressed"
        android:text="@string/done"
        android:textStyle="bold" />

    <TextView
        android:textSize="10dp"
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hi"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/blueocean"
        android:text="@string/Want"
        android:textColor="#131457"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview1"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/helveticaworldbold"
        android:text="@string/phone" />

    <CheckBox
        android:fontFamily="@font/helveticaworldbold"
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox1"
        android:layout_marginStart="30dp"
        android:text="@string/computer" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/blueocean"
        android:text="@string/buy"
        android:textColor="#131457"
        android:textStyle="bold"
        android:textSize="10dp"/>

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview2"
        android:layout_alignParentStart="true">

        <RadioButton
            android:fontFamily="@font/helveticaworldbold"
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/pai_pal" />

        <RadioButton
            android:fontFamily="@font/helveticaworldbold"
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/card" />

        <RadioButton
            android:fontFamily="@font/helveticaworldbold"
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/delivery" />
    </RadioGroup>

    <TextView
        android:id="@+id/mblg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/blueocean"
        android:text="@string/m"
        android:textColor="#131457"
        android:textStyle="bold"
        android:textSize="10dp"/>


    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mblg"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/editText"
        android:layout_toRightOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/mblg"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:inputType="number" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/progressBar"
        android:layout_alignEnd="@id/checkbox2"
        android:layout_alignRight="@id/checkbox2"
        android:layout_marginTop="-101dp"
        android:layout_marginEnd="-14dp"
        android:layout_marginRight="-14dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:srcCompat="@drawable/gir3" />

</RelativeLayout>