<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amassirballpoint"
        android:gravity="center"
        android:text="@string/detail"
        android:textColor="#751A53"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hi"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/blueocean"
        android:text="@string/buyy"
        android:textColor="#131457"
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/tvv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview1"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/helveticaworldbold"
        android:textColor="#009688"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvv1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/blueocean"
        android:text="@string/mblgg"
        android:textColor="#131457"
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/tvv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/helveticaworldbold"
        android:text=""
        android:textColor="#009688"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/mblg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvv2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/blueocean"
        android:text="@string/by"
        android:textColor="#131457"
        android:textStyle="bold"
        android:textSize="10dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/tvv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mblg"
        android:layout_marginStart="40dp"
        android:textColor="#009688"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/ftm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvv3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/frutigerltaabic"
        android:gravity="left"
        android:text="@string/thanks"
        android:textSize="15dp" />

</RelativeLayout>